composite id pt2: struct support

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -70,7 +70,7 @@ set(gen_plugins
     plugins/cpp/ClassMetadataPlugin.cpp
     plugins/cpp/CWrappersPlugin.cpp
     plugins/cpp/CompositeIdTypePlugin.cpp
-    plugins/cpp/CompositeIdTypePlugin.h
+    plugins/cpp/CompositeIdStructPlugin.cpp
 )
 
 set(gen_generators
@@ -97,7 +97,6 @@ set(gen_utils
     utils/NamingConvention.cpp
     utils/StringSwitcher.cpp
     utils/CompositeIdHelper.cpp
-    utils/CompositeIdHelper.h
 )
 
 add_library(generator
