--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -73,6 +73,7 @@ set(gen_plugins
     plugins/container/ContainerPluginBase.cpp
     plugins/container/ContainerIndexPlugin.cpp
     plugins/container/ContainerAddElemPlugin.cpp
+    plugins/container/ContainerGetElemPlugin.cpp
     plugins/container/ContainerFieldPlugin.cpp
 )
 
