container delete elem implementation for structs with composite id

--- a/libs/generator/CMakeLists.txt
+++ b/libs/generator/CMakeLists.txt
@@ -74,6 +74,7 @@ set(gen_plugins
     plugins/container/ContainerIndexPlugin.cpp
     plugins/container/ContainerAddElemPlugin.cpp
     plugins/container/ContainerGetElemPlugin.cpp
+    plugins/container/ContainerDeleteElemPlugin.cpp
     plugins/container/ContainerFieldPlugin.cpp
 )
 
